hphp/hack/test/typecheck/async_function_untyped4.php.exp
File "async_function_untyped4.php", line 7, characters 7-8:
Class C1 does not correctly implement all required methods  (Typing[4110])
File "async_function_untyped4.php", line 7, characters 21-22:
Some methods are incompatible with those declared in type I1
Read the following to see why:
File "async_function_untyped4.php", line 8, characters 25-25:
Member f has the wrong type
File "async_function_untyped4.php", line 4, characters 24-26:
This is an int
File "async_function_untyped4.php", line 8, characters 25-25:
It is incompatible with an object of type Awaitable (result of 'async function')
